<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    android:gravity="center|top"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_main_scene"
    android:id="@+id/main">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/vinyl_record_png"
        android:contentDescription="@string/homme_image"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/invited_user_button"
        android:textSize="24sp"
        app:backgroundTint="#023047"
        app:cornerRadius="100dp"
        app:elevation="2dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colecter_button"
        android:textSize="24sp"
        app:backgroundTint="#023047"
        app:cornerRadius="100dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"/>

</LinearLayout>